tests/NormalTests/paczka1/small_fuzzy/53077267.err
Error in line 6: 8dpxRYxMgJE S805 28,9
Error in line 7: BPJsVIxL S805 363,3
